# ou-graph-based-ttg

./: .env.sample  .gitignore  README.md  course_offerings_tool.py  create_schedule.py  dedupe.py  get_course_patterns.py  get_programs.py  load.py  longest_chain.py  main.py  parse_courses.py  parse_program.py  parse_programs.py  parse_requisites.py  programs.json  prompt.md  prompt_parse_program.md  pyproject.toml
data/: catalog.sample.json  courses.json  courses.parsed.json
prompts/: parse_program.md  parse_requisites.md
scheduler/: brick_handler.py  create_schedule.py  data_loader.py  db.py  logger.py  main.py  requirement_simplifier.py  scheduling_types.py  utils.py
tests/: conftest.py  test_check_prerequisites_satisfied.py  test_course_graph.py  test_extract_all_course_codes.py  test_extract_program_metadata.py  test_generate_semesters.py  test_load_program_json.py  test_parse_args.py  test_parse_requirement.py  test_resolve_requirements.py  test_schedule_patterns.py  test_topological_sort.py
