[project]
name = "neo4j-program-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.57.0",
    "neo4j>=6.0.3",
    "ortools>=9.15.6755",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
]
